--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1"
   },
   "devDependencies": {
